<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/headerLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/auth_bg"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/isolatechImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/isolatech_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:fontFamily="@font/inter_bold"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contentLyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/headerLyt">

            <LinearLayout
                android:id="@+id/contentTopLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_alignParentTop="true">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_login"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="@font/inter_bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_slogan"
                    android:textColor="@color/light_gray"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentBottomLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/linkTermsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_terms"
                    android:textColor="@color/login_links"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/linkPlansTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_plans"
                    android:textColor="@color/login_links"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/linkContactUsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_contact_us"
                    android:textColor="@color/login_links"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/contentTopLyt"
                android:layout_above="@id/contentBottomLyt">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_margin="24dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/subtitle_email"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:fontFamily="@font/inter_bold" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/emailEdt"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="4dp"
                            android:hint="@string/str_email"
                            android:fontFamily="@font/inter_medium"
                            android:textColor="@color/light_gray"
                            android:textSize="14sp"
                            android:gravity="center_vertical"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/edit_text_border"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/subtitle_password"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:fontFamily="@font/inter_bold" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/passwordEdt"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/inter_medium"
                            android:textColor="@color/light_gray"
                            android:textSize="14sp"
                            android:gravity="center_vertical"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:inputType="textPassword"
                            android:background="@drawable/edit_text_border"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/linkForgotPasswordTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/link_forgot_password"
                            android:textColor="@color/login_links"
                            android:textSize="12sp"
                            android:fontFamily="@font/inter_regular"
                            android:gravity="right" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/loginBtn"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="24dp"
                            android:text="@string/btn_login"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:fontFamily="@font/inter_bold"
                            android:textAllCaps="false"
                            android:background="@drawable/button_radius"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="16dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_not_member"
                                android:textColor="@color/light_gray"
                                android:textSize="14sp"
                                android:fontFamily="@font/inter_regular" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/linkRegisterTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:text="@string/link_register"
                                android:textColor="@color/login_links"
                                android:textSize="14sp"
                                android:fontFamily="@font/inter_regular" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </RelativeLayout>



        </RelativeLayout>

    </RelativeLayout>

</layout>